change ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Windows image file caches
+﻿# Windows image file caches
 Thumbs.db
 ehthumbs.db
 
@@ -26,8 +26,7 @@ $RECYCLE.BIN/
 .LSOverride
 
 # Icon must ends with two \r.
-Icon
-
+Icon
 # Thumbnails
 ._*
 
@@ -36,3 +35,5 @@ Icon
 .Trashes
 
 compiled。class.txt
+*.obj
+mm.c
